Fixed Navbar collapsing, minor code clean up in style.css

--- a/style.css
+++ b/style.css
@@ -96,14 +96,6 @@ h4{
 
 }
 
-.nav  a{
-    color: white;
-    text-decoration: none;
-}
-.nav  a:hover{
-    color: lightblue;
-    text-underline: none;
-}
 
 #top {
     position: fixed;
